<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">教师通讯录</string>
    <string name="no_data">没有任何数据</string>
    <string name="RandD">研发部</string>
    <string name="groupCount">[20]</string>
    <string name="descImage">图片描述</string>
    <string name="item_addGroup01">创建分组</string>
    <string name="item_deleteGroup01">删除分组</string>
    <string name="item_renameGroup01">重命名</string>
    <string name="item_addContact01">添加联系人</string>
    <string name="item_deleteContact02">删除联系人</string>
    <string name="item_editContact02">编辑联系人</string>
    <string name="item_moveContactTo02">移动分组</string>
    <string name="item_deleteContact03">删除联系人</string>
    <string name="item_editContact03">编辑联系人</string>
    <string name="contact_name">姓 名</string>
    <string name="contact_telPhone">手 机</string>
    <string name="contact_cornet">短 号</string>
    <string name="contact_group">所在分组</string>
    <string name="contact_email">Email</string>
    <string name="contact_address">地 址</string>
    <string name="contact_birthday">生 日</string>
    <string name="contact_description">联系人简介</string>
    <string name="tip_contact_name">姓名</string>
    <string name="tip_contact_telPhone">手机号码</string>
    <string name="tip_contact_cornet">短号</string>
    <string name="tip_contact_group">移动分组</string>
    <string name="tip_contact_email">邮箱地址</string>
    <string name="tip_contact_address">地址</string>
    <string name="tip_contact_description">联系人简介</string>
    <string name="tip_search_contact">搜 索</string>
    <string name="btn_ok">确 定</string>
    <string name="btn_cancel">取 消</string>
    <string name="use_picture_as_primary">使用此头像</string>
    <string name="changePicture">更改头像</string>
    <string name="removePicture">删除头像</string>
    <string name="contactIcon">联系人头像</string>
    <string name="take_picture">拍照</string>
    <string name="pick_picture">从图库中选取一张</string>
    <string name="btn_qMessage">QMessage</string>
    <string name="btn_contactGroup">通讯录</string>
    <string name="title_search_contact">搜索联系人</string>
    <string name="option_menu_search_contact">搜索联系人</string>
    <string name="option_menu_add_group">添加分组</string>
    <string name="option_menu_add_contact">添加联系人</string>
    <string name="option_menu_about_us">关于我们</string>
    <string name="option_menu_exit">退 出</string>
    <string name="title_contact_info">联系人信息</string>
    <string name="contact_info_share_to">将该联系人信息分享到</string>
    <string name="popup_menu_add_group" >添加分组</string>
    <string name="popup_menu_about_us" >关于我们</string>
    <string name="popup_menu_exit" >退 出</string>
    <string name="action_search_contact">搜索联系人</string>
    <string name="action_add_contact">添加联系人</string>
    <string name="action_add_group">添加分组</string>
    <string name="action_about_us">关于我们</string>
    <string name="action_exit">退 出</string>

</resources>